# sendblue-python

./: README.md  pyproject.toml  setup.py
scripts/: build.sh  deploy.sh
sendblue/: __init__.py  sendblue.py
sendblue.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_sendblue.py
