[project]
name = "sendblue"
version = "0.1.4"
description = "This package is a Python wrapper for the Sendblue API. It provides a simple interface for sending and receiving messages."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["imessage", "api", "sms", "python", "sendblue", "sendblue python", "sendblue api", "imessage api", "sms api"]
authors = [
  {name = "Elliott Storey", email = "storey.elliott@gmail.com"},
  {name = "Nikita Jerschow", email = "nikita@sendblue.co"}
]
maintainers = [
  {name = "Elliott Storey", email = "storey.elliott@gmail.com"},
  {name = "Nikita Jerschow", email = "nikita@sendblue.co"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Communications :: Chat",
  "Topic :: Communications :: Internet Phone",
  "Topic :: Communications ::Telephony",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 2",
  "Programming Language :: Python :: 3",
  "Typing :: Typed"
]

[project.urls]
"Homepage" = "https://sendblue.co"
"Bug Reports" = "https://github.com/sendblue-api/sendblue-python/issues"
"Source" = "https://github.com/sendblue-api/sendblue-python"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"